--- a/contrib/croaring/tests/CMakeLists.txt
+++ b/contrib/croaring/tests/CMakeLists.txt
@@ -5,10 +5,6 @@
 
 
 add_cpp_test(cpp_unit)
-add_cpp_test(cpp_random_unit)
-add_cpp_test(cpp_example1)
-add_cpp_test(cpp_example2)
-add_c_test(c_example1)
 add_c_test(array_container_unit)
 add_c_test(bitset_container_unit)
 add_c_test(mixed_container_unit)
@@ -19,8 +15,8 @@ add_c_test(format_portability_unit)
 add_c_test(robust_deserialization_unit)
 add_c_test(container_comparison_unit)
 
-if (NOT WIN32)
-# We exclude POSIX tests from Microsoft Windows
+if (NOT MSVC)
+# We exclude POSIX tests from Visual Studio default build
 add_c_test(realdata_unit)
 # We used to exclude POSIX tests from Visual Studio default build the documented way but this leads to spurious test failures.
 # set_target_properties(realdata_unit PROPERTIES EXCLUDE_FROM_DEFAULT_BUILD 1)
