--- a/contrib/croaring/.drone.yml
+++ b/contrib/croaring/.drone.yml
@@ -19,29 +19,7 @@ steps:
     - mkdir build && cd build
     - cmake $CMAKE_FLAGS ..
     - make -j
-    - ctest .  --output-on-failure
----
-kind: pipeline
-name: amd64_clang_cmake_sanitize
-
-platform:
-  os: linux
-  arch: amd64
-
-steps:
-- name: Build and Test
-  image: ubuntu:18.04
-  environment:
-    CC: clang
-    CXX: clang++
-  commands:
-    - apt-get update -y
-    - apt-get install -y make $CC g++ perl cmake
-    - $CC --version
-    - mkdir build && cd build
-    - cmake $CMAKE_FLAGS .. -DROARING_SANITIZE=ON
-    - make -j
-    - ASAN_OPTIONS="detect_leaks=0" ctest .  --output-on-failure
+    - ctest -V
 ---
 kind: pipeline
 name: amd64_gcc_cmake
@@ -63,29 +41,7 @@ steps:
     - mkdir build && cd build
     - cmake $CMAKE_FLAGS ..
     - make -j
-    - ctest .  --output-on-failure
----
-kind: pipeline
-name: amd64_gcc_cmake_sanitize
-
-platform:
-  os: linux
-  arch: amd64
-
-steps:
-- name: Build and Test
-  image: ubuntu:18.04
-  environment:
-    CC: gcc
-    CXX: g++
-  commands:
-    - apt-get update -y
-    - apt-get install -y make $CC g++ perl cmake
-    - $CC --version
-    - mkdir build && cd build
-    - cmake $CMAKE_FLAGS ..  -DROARING_SANITIZE=ON
-    - make -j
-    - ASAN_OPTIONS="detect_leaks=0" ctest .  --output-on-failure
+    - ctest -V
 ---
 kind: pipeline
 name: arm64_clang_cmake
@@ -107,29 +63,7 @@ steps:
     - mkdir build && cd build
     - cmake $CMAKE_FLAGS ..
     - make -j
-    - ctest .  --output-on-failure
----
-kind: pipeline
-name: arm64_clang_cmake_sanitize
-
-platform:
-  os: linux
-  arch: arm64
-
-steps:
-- name: Build and Test
-  image: ubuntu:18.04
-  environment:
-    CC: clang
-    CXX: clang++
-  commands:
-    - apt-get update -y
-    - apt-get install -y make $CC g++ perl cmake
-    - $CC --version
-    - mkdir build && cd build
-    - cmake $CMAKE_FLAGS ..  -DROARING_SANITIZE=ON
-    - make -j
-    - ASAN_OPTIONS="detect_leaks=0" ctest .  --output-on-failure
+    - ctest -V
 ---
 kind: pipeline
 name: arm64_gcc_cmake
@@ -151,26 +85,4 @@ steps:
     - mkdir build && cd build
     - cmake $CMAKE_FLAGS ..
     - make -j
-    - ctest .  --output-on-failure
----
-kind: pipeline
-name: arm64_gcc_cmake_sanitize
-
-platform:
-  os: linux
-  arch: arm64
-
-steps:
-- name: Build and Test
-  image: ubuntu:18.04
-  environment:
-    CC: gcc
-    CXX: g++
-  commands:
-    - apt-get update -y
-    - apt-get install -y make $CC g++ perl cmake
-    - $CC --version
-    - mkdir build && cd build
-    - cmake $CMAKE_FLAGS ..  -DROARING_SANITIZE=ON
-    - make -j
-    - ASAN_OPTIONS="detect_leaks=0" ctest .  --output-on-failure
+    - ctest
