--- a/contrib/croaring/CMakeLists.txt
+++ b/contrib/croaring/CMakeLists.txt
@@ -1,8 +1,4 @@
 cmake_minimum_required(VERSION 2.8)
-project(RoaringBitmap
-  DESCRIPTION "Roaring bitmaps in C (and C++)"
-  LANGUAGES CXX C
-)
 include(GNUInstallDirs)
 
 set(CMAKE_MACOSX_RPATH OFF)
@@ -11,34 +7,33 @@ if (NOT CMAKE_BUILD_TYPE)
                 set(CMAKE_BUILD_TYPE Release CACHE STRING "Choose the type of build." FORCE)
 endif()
 
+project(RoaringBitmap)
 set(ROARING_LIB_NAME roaring)
 set(PROJECT_VERSION_MAJOR 0)
-set(PROJECT_VERSION_MINOR 3)
-set(PROJECT_VERSION_PATCH 1)
-set(ROARING_LIB_VERSION "0.3.1" CACHE STRING "Roaring library version")
-set(ROARING_LIB_SOVERSION "1" CACHE STRING "Roaring library soversion")
+set(PROJECT_VERSION_MINOR 2)
+set(PROJECT_VERSION_PATCH 66)
+set(ROARING_LIB_VERSION "0.2.66" CACHE STRING "Roaring library version")
+set(ROARING_LIB_SOVERSION "0" CACHE STRING "Roaring library soversion")
 
-option(ROARING_EXCEPTIONS "Enable exception-throwing interface" ON)
-if(NOT ROARING_EXCEPTIONS)
-  message(STATUS "exception interface turned off. Code that does not check error codes will not compile.")
-endif()
-
-
-option(ROARING_DISABLE_X64 "Forcefully disable x64 optimizations even if hardware supports it (this disables AVX)" OFF)
-option(ROARING_DISABLE_AVX "Forcefully disable AVX even if hardware supports it " OFF)
+option(ROARING_DISABLE_X64 "Forcefully disable x64 optimizations even if hardware supports it (this disables AVX) " OFF)
+option(ROARING_DISABLE_AVX "Forcefully disable AVX even if hardware supports it" OFF)
 option(ROARING_DISABLE_NEON "Forcefully disable NEON even if hardware supports it" OFF)
-option(ROARING_DISABLE_NATIVE "Forcefully disable -march optimizations (obsolete)" OFF)
+option(ROARING_DISABLE_NATIVE "Forcefully disable -march optimizations" OFF)
+set(ROARING_ARCH "native" CACHE STRING "If ROARING_DISABLE_NATIVE is OFF, the architecture to optimize for (-march)")
 
-option(ROARING_BUILD_STATIC "Build a static library" ON)
-if(BUILD_SHARED_LIBS)
-  MESSAGE( STATUS "BUILD_SHARED_LIBS: " ${BUILD_SHARED_LIBS})
-  MESSAGE( STATUS "Building a shared library by request. ")
-  set(ROARING_BUILD_STATIC OFF)
+IF(${CMAKE_SYSTEM_PROCESSOR} MATCHES "arm")
+SET(ROARING_DISABLE_AVX ON) # for ARM processors, there is no hope of having AVX support
+SET(ROARING_DISABLE_NATIVE ON) # ARM platforms may not like -march=native
+ENDIF(${CMAKE_SYSTEM_PROCESSOR} MATCHES "arm")
+
+if(${CMAKE_SYSTEM_PROCESSOR} MATCHES "aarch64")
+SET(ROARING_DISABLE_AVX ON) # for ARM processors, there is no hope of having AVX support
+SET(ROARING_DISABLE_NATIVE ON) # ARM platforms may not like -march=native
 endif()
+
+option(ROARING_BUILD_STATIC "Build a static library" OFF) # turning it on disables the production of a dynamic library
 option(ROARING_LINK_STATIC "Link executables (tests, benchmarks) statically" OFF)
 option(ROARING_BUILD_LTO "Build library with Link Time Optimization" OFF)
-option(ROARING_BUILD_C_AS_CPP "Build library C files using C++ compilation" OFF)
-option(ROARING_BUILD_C_TESTS_AS_CPP "Build test C files using C++ compilation" OFF)
 option(ROARING_SANITIZE "Sanitize addresses" OFF)
 option(ENABLE_ROARING_TESTS "If OFF, disable unit tests altogether" ON)
 
@@ -48,35 +43,16 @@ find_package(CTargets)
 find_package(Options)
 find_package(LTO)
 
-configure_file("${CMAKE_CURRENT_SOURCE_DIR}/roaring.pc.in"
-               "${CMAKE_CURRENT_BINARY_DIR}/roaring.pc" @ONLY)
-install(FILES "${CMAKE_CURRENT_BINARY_DIR}/roaring.pc" DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig)
-
 ## C header files get installed to /usr/local/include/roaring typically
-
-
-add_library(roaring-headers INTERFACE)
-target_include_directories(roaring-headers INTERFACE
-  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/${ROARING_LIB_NAME}>
-  $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCDIR}>)
-add_library(roaring-headers-cpp INTERFACE)
-target_include_directories(roaring-headers-cpp INTERFACE
-  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/cpp>
-   $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCDIR}>)
+install(DIRECTORY include/${ROARING_LIB_NAME} DESTINATION include)
 
 ####
 ### Some users want the C++ header files to be installed as well.
 ### C++ header files get installed to /usr/local/include/roaring typically
 SET(CPP_ROARING_HEADERS cpp/roaring64map.hh  cpp/roaring.hh) # needs to be updated if we add more files
 install(FILES ${CPP_ROARING_HEADERS} DESTINATION include/${ROARING_LIB_NAME})
-install(DIRECTORY include/${ROARING_LIB_NAME} DESTINATION include)
 
-install(TARGETS roaring-headers roaring-headers-cpp
-   EXPORT ${ROARING_LIB_NAME}-config
-   ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
-   LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-   RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
-   INCLUDES DESTINATION ${CMAKE_INSTALL_INCDIR})
+
 enable_testing()
 include(CTest)
 
@@ -100,7 +76,11 @@ endif()
 # and should not be hard to figure out.
 MESSAGE( STATUS "CMAKE_SYSTEM_PROCESSOR: " ${CMAKE_SYSTEM_PROCESSOR})
 MESSAGE( STATUS "CMAKE_BUILD_TYPE: " ${CMAKE_BUILD_TYPE} ) # this tends to be "sticky" so you can remain unknowingly in debug mode
+MESSAGE( STATUS "ROARING_DISABLE_X64: " ${ROARING_DISABLE_X64} ) # options in cmake are "sticky" so old options can remain even if that is counterintuitive
+MESSAGE( STATUS "ROARING_DISABLE_AVX: " ${ROARING_DISABLE_AVX} ) # options in cmake are "sticky" so old options can remain even if that is counterintuitive
 MESSAGE( STATUS "ROARING_DISABLE_NEON: " ${ROARING_DISABLE_NEON} )
+MESSAGE( STATUS "ROARING_DISABLE_NATIVE: " ${ROARING_DISABLE_NATIVE} )
+MESSAGE( STATUS "ROARING_ARCH: " ${ROARING_ARCH} )
 MESSAGE( STATUS "ROARING_BUILD_STATIC: " ${ROARING_BUILD_STATIC} )
 MESSAGE( STATUS "ROARING_LINK_STATIC: " ${ROARING_LINK_STATIC} )
 MESSAGE( STATUS "ROARING_BUILD_LTO: " ${ROARING_BUILD_LTO} )
